[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/themes/gonner_theme_just_fly.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/OCRAEXT.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://user_interface/Settings/scripts/settings_screen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -225.0
margin_right = 225.0
margin_bottom = 225.0
rect_min_size = Vector2( 450, 450 )
color = Color( 0.298039, 0.321569, 0.333333, 0.843137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -225.0
margin_right = 225.0
margin_bottom = 225.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/NinePatchRect"]
anchor_right = 1.0
margin_left = 1.0
margin_top = 24.0
margin_right = -89.0
margin_bottom = 21.0
rect_min_size = Vector2( 360, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/NinePatchRect/VBoxContainer"]
margin_right = 440.0
margin_bottom = 18.0
rect_min_size = Vector2( 440, 18 )

[node name="SFX" type="HSlider" parent="Control/NinePatchRect/VBoxContainer/NinePatchRect"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -8.0
margin_bottom = 8.0
rect_min_size = Vector2( 360, 16 )
focus_mode = 0
min_value = -40.0
max_value = 10.0
step = 2.0
value = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NinePatchRect/VBoxContainer/NinePatchRect"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 18.0
rect_min_size = Vector2( 56, 18 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "SFX"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="Control/NinePatchRect/VBoxContainer"]
margin_top = 22.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 440, 18 )

[node name="World" type="HSlider" parent="Control/NinePatchRect/VBoxContainer/NinePatchRect3"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -8.0
margin_bottom = 8.0
rect_min_size = Vector2( 360, 16 )
focus_mode = 0
min_value = -40.0
max_value = 10.0
step = 2.0
value = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NinePatchRect/VBoxContainer/NinePatchRect3"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 18.0
rect_min_size = Vector2( 56, 18 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "World"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/NinePatchRect/VBoxContainer"]
margin_top = 44.0
margin_right = 440.0
margin_bottom = 62.0
rect_min_size = Vector2( 440, 18 )

[node name="Music" type="HSlider" parent="Control/NinePatchRect/VBoxContainer/NinePatchRect2"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -8.0
margin_bottom = 8.0
rect_min_size = Vector2( 360, 16 )
focus_mode = 0
min_value = -40.0
max_value = 10.0
step = 2.0
value = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NinePatchRect/VBoxContainer/NinePatchRect2"]
margin_left = 8.0
margin_right = 72.0
margin_bottom = 18.0
rect_min_size = Vector2( 56, 18 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Music"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/NinePatchRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -365.0
margin_bottom = -45.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/NinePatchRect/VBoxContainer2"]
margin_right = 450.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="Fullscreen" type="CheckBox" parent="Control/NinePatchRect/VBoxContainer2/HBoxContainer"]
pause_mode = 2
margin_right = 138.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
text = "FULLSCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="CheckBox" parent="Control/NinePatchRect/VBoxContainer2/HBoxContainer"]
pause_mode = 2
margin_left = 142.0
margin_right = 280.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_fonts/font = SubResource( 2 )
text = "Borderless"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearData" type="Button" parent="Control/NinePatchRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -61.0
margin_right = 62.0
margin_bottom = -35.0
rect_min_size = Vector2( 122, 26 )
custom_fonts/font = SubResource( 3 )
text = "Clear Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="Control/NinePatchRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -29.0
margin_right = 62.0
margin_bottom = -3.0
rect_min_size = Vector2( 122, 26 )
custom_fonts/font = SubResource( 3 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Control/NinePatchRect/VBoxContainer/NinePatchRect/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="Control/NinePatchRect/VBoxContainer/NinePatchRect3/World" to="." method="_on_World_value_changed"]
[connection signal="value_changed" from="Control/NinePatchRect/VBoxContainer/NinePatchRect2/Music" to="." method="_on_Music_value_changed"]
[connection signal="toggled" from="Control/NinePatchRect/VBoxContainer2/HBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Control/NinePatchRect/VBoxContainer2/HBoxContainer/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="pressed" from="Control/NinePatchRect/ClearData" to="." method="_on_ClearData_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/Return" to="." method="_on_Return_pressed"]
